--- a/tmpl/layout/content/signin.html
+++ b/tmpl/layout/content/signin.html
@@ -24,7 +24,7 @@
          </div> 
          <div class="flex flex-col items-start mb-3">
             <div class="flex items-center w-full h-5">
-               <input id="terms" type="checkbox" onchange="showTermsIndicator(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"  />
+               <input id="terms" type="checkbox" onchange="isValidTerms(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"  />
                <label for="terms" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a>.</label>
             </div>
             <div class=" w-full h-3"><span class="text-red-500 dark:text-orange-400 text-xs my-2 hidden" id="terms_indicator">You must agree with terms and conditions</span></div>
