--- a/tmpl/layout/content/signup.html
+++ b/tmpl/layout/content/signup.html
@@ -9,7 +9,7 @@
          </div>
      </div>
       <form class="w-full pb-12" method="POST" action="/signup" id="signup_form">
-         <div class="grid gap-6 mb-3 xl:grid-cols-2">
+         <div class="grid gap-6 mb-6 xl:grid-cols-2">
             <div>
                <label for="first_name"  class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First name</label>
                <input value="sds" type="text" oninput="validateInput(this, /^[a-zA-Z ]{3,30}$/, 'first_name_indicator')" name="first_name" id="first_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="John" required />
@@ -40,8 +40,24 @@
                   <span id="mobile_indicator" class="text-red-500 dark:text-orange-400 text-xs my-2 hidden">Please Enter a valid Mobile</span>
                </div>
             </div>
+           
          </div>
          <div class="grid gap-6 mb-6 grid-cols-1">
+            <div class="flex gap-3">
+               <label for="gender" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Gender : </label>
+               <div class="flex items-center mb-4">
+                  <input class="mr-2" type="radio" id="male" name="gender" value="male" checked>
+                  <label class="text-gray-700 text-sm" for="male">Male</label>
+                </div>
+                <div class="flex items-center mb-4">
+                  <input class="mr-2" type="radio" id="female" name="gender" value="female">
+                  <label class="text-gray-700 text-sm" for="female">Female</label>
+                </div>
+                <div class="flex items-center mb-4">
+                  <input class="mr-2" type="radio" id="other" name="gender" value="other">
+                  <label class="text-gray-700 text-sm" for="other">Other</label>
+                </div>
+            </div>
             <div>
                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email address</label>
                <input value="fgfgf@dfdf.hh" type="email" oninput="isValidEmail(this)" name="email"  id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="john.doe@company.com" required />
@@ -65,8 +81,8 @@
             </div> 
             <div class="flex flex-col items-start">
                <div class="flex items-center h-5">
-               <input id="remember" name="remember" type="checkbox" value="terms" onchange="isValidTerms(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800" required />
-               <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a>.</label>
+               <input id="terms" name="terms" type="checkbox" value="terms" onchange="isValidTerms(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800" required />
+               <label for="terms" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a>.</label>
                </div>
                <div class="h-3">
                   <span id="terms_indicator" class="text-red-500 dark:text-orange-400 text-xs my-2 hidden">You must agree terms and conditions</span>
