--- a/tmpl/layout/base.html
+++ b/tmpl/layout/base.html
@@ -6,6 +6,7 @@
         <title>{{.Title}}</title>   
         <link rel="stylesheet" href="/static/css/tailwind.css" />
         <script src="/static/js/init.js" type="text/javascript"></script>
+        <script src="/static/js/sha256.js" type="text/javascript"></script>
         {{.Links}}
     </head>
     <body class="flex flex-col h-screen bg-gray-100 dark:bg-gray-900">
