--- a/tmpl/layout/content/signin.html
+++ b/tmpl/layout/content/signin.html
@@ -17,14 +17,14 @@
          </div> 
          <div class="mb-3">
             <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-            <input type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="•••••••••"  />
+            <input autocomplete="off" type="password" name="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="•••••••••"  />
             <div class="h-3">
                <span class="text-red-500 dark:text-orange-400 text-xs my-2 hidden" id="password_indicator" >Please Enter a valid Password</span>
             </div>
          </div> 
          <div class="flex flex-col items-start mb-3">
             <div class="flex items-center w-full h-5">
-               <input id="terms" type="checkbox" onchange="isValidTerms(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"  />
+               <input id="terms" name="terms" type="checkbox" onchange="isValidTerms(this)" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800"  />
                <label for="terms" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">I agree with the <a href="#" class="text-blue-600 hover:underline dark:text-blue-500">terms and conditions</a>.</label>
             </div>
             <div class=" w-full h-3"><span class="text-red-500 dark:text-orange-400 text-xs my-2 hidden" id="terms_indicator">You must agree with terms and conditions</span></div>
